[package]
name = "orange"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_egui = "0.31.1"
bevy_state = "0.15.0"
bevy_svg = "0.14.0"
bevy_ui = "0.15.0"
rand = "0.8.5"
bevy = "0.15.0"
bevy_simple_text_input = "0.10.0"

[lib]
crate-type = [
	"cdylib"
]

[[bin]]
name = "orange"
path = "src/lib.rs"


[package.metadata.android]
package = "org.orange.example"
apk_name = "orange"
strip = "strip"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 33

#[profile.dev]
#opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
#[profile.dev.package."*"]
#opt-level = 3


